# e-boe

./: .env.development  .env.production  .gitignore  Makefile  README.md  backup.sql  docker-compose.prod.yml  docker-compose.yml  eBoE_User_Guide.md  fix_jsonb.py  read_excel.py  remove_bg.py  test_get_products.py  test_gst.py  test_payment.py  test_rapidapi.py
backend/: alembic.ini  celerybeat-schedule  celerybeat-schedule-shm  celerybeat-schedule-wal  inspect_boe.py  inspect_db.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  test_get_products.py  test_lookup.py  test_passbook.py  test_payment.py  test_product.py  test_rapidapi.py  worker-start.sh
backend/alembic/: env.py
backend/alembic/versions/: 01a106cf9979_add_public_access_token.py  0bff1297b5ca_add_discounting_permissions.py  311fee47621f_add_credit_period_and_gst_bifurcation.py  46df75c96263_add_bills_of_exchange_tables.py  56b9edb77e23_add_boe_bids_and_draft_status.py  65eebd6fcf3e_add_boe_holder_and_negotiability.py  8a5f52563210_add_creditors.py  8df2d3de45d6_remove_customer_type.py  98c15071513b_add_hsn_sac_codes_table.py  a1b2c3d4e5f6_add_products_table.py  add_defaults_for_boe.py  add_network_drawee_boe.py  af39c5170d0f_add_transaction_type.py  af753798f338_add_financier_profiles_and_discounting_.py  be897eac254d_add_link_to_notifications_and_make_user_.py  bf5a82e1c9d4_add_discounting_bids_and_transactions.py  d9a20e585829_fix_outstanding_balances.py  (+4 more)
backend/app/: inspect_db_2.py  main.py
backend/scripts/: fix_historical_bills.py  seed_hsn.py
backend/tests/: conftest.py
(+165 files in other folders)
