[project]
name = "eboe-backend"
version = "1.0.0"
description = "Electronic Bills of Exchange Management System API"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.18",
    "celery[redis]>=5.4.0",
    "redis>=5.2.0",
    "httpx>=0.28.0",
    "python-dotenv>=1.0.0",
    "Pillow>=10.0.0",
    "reportlab>=4.0.0",
    "openpyxl>=3.1.0",
    "pandas>=2.2.0",
    "qrcode>=7.4.0",
    "python-barcode>=0.15.0",
    "pyotp>=2.9.0",
    "emails>=0.6.0",
    "jinja2>=3.1.0",
    "apscheduler>=3.10.0",
    "websockets>=12.0",
    "aiofiles>=24.0.0",
    "boto3>=1.34.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "N"]
ignore = ["E501", "E712", "E402", "UP046"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true
